--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-streamlit==1.52.2
-streamlit-authenticator>=0.3.0
-torch>=2.0.0
-torchvision>=0.15.0
-Pillow>=9.0.0
-PyYAML>=6.0
-bcrypt>=4.0.0
-fpdf2>=2.7.0
-matplotlib>=3.5.0
-numpy>=1.23.0
-pandas>=1.5.0
+streamlit==1.36.0
+streamlit-authenticator==0.2.3
+PyYAML==6.0.1
+bcrypt==4.0.1
+fpdf2==2.7.0
+matplotlib==3.8.0
+Pillow==10.0.0
+numpy==1.24.3
+pandas==2.0.3
+torch==2.0.0
+torchvision==0.15.0
